instructor  profile change

--- a/src/app/instructor-components/instructor-profile/instructor-profile.component.html
+++ b/src/app/instructor-components/instructor-profile/instructor-profile.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-7">
+<div class="container">
   <div
     class="page-header min-height-300 border-radius-xl mt-4"
     style="
@@ -7,7 +7,7 @@
   >
     <span class="mask bg-gradient-dark opacity-6"></span>
   </div>
-  <div class="card card-body blur shadow-blur mx-4 mt-n6 overflow-hidden">
+  <div class="card card-body blur shadow-blur mx-4  overflow-hidden">
     <div class="row gx-4">
       <div class="col-auto">
         <div class="avatar avatar-xl position-relative">
