--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -72,7 +72,7 @@
                   <input type="text" class="form-control" placeholder="Soyad" aria-label="lastName" aria-describedby="email-addon" formControlName="lastName">
                 </div>
                 <div class="mb-3">
-                  <input type="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="email-addon" formControlName="mail">
+                  <input type="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="email-addon" formControlName="email">
                 </div>
                 <div class="mb-3">
                   <input type="password" class="form-control" placeholder="Şifre" aria-label="Password" aria-describedby="password-addon" formControlName="password">
