--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -72,6 +72,9 @@
                   <input type="text" class="form-control" placeholder="Soyad" aria-label="lastName" aria-describedby="email-addon" formControlName="lastName">
                 </div>
                 <div class="mb-3">
+                  <input type="text" class="form-control" placeholder="Tam ismi giriniz!" aria-label="fullName" aria-describedby="email-addon" formControlName="fullName">
+                </div>
+                <div class="mb-3">
                   <input type="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="email-addon" formControlName="email">
                 </div>
                 <div class="mb-3">
