--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -92,7 +92,7 @@
 
     <!-- carousel  -->
 
-    <div class="eae my-7 mx-auto top-0">
+    <div class="eae my-8 mx-auto">
       <div class="row">
         <div class="col-12 ">
           <carousel class="shadow" >
@@ -101,7 +101,7 @@
                 style="display: block; width: 100%;">
             </slide>
             <slide class="opacity-100">
-              <img src="https://i.imgur.com/3zJ8LgV.png" alt="second slide"
+              <img src="https://i.imgur.com/WW1LWdt.png" alt="second slide"
                 style="display: block; width: 100%;">
             </slide>
             <slide class="opacity-100">
@@ -217,7 +217,7 @@
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
                       <img class="card__thumb" src="https://media-exp1.licdn.com/dms/image/C5603AQElngeK3wBOVw/profile-displayphoto-shrink_800_800/0/1540907275706?e=1675900800&v=beta&t=ZRavOP2UR5nCVnI2ye8ZwDJQrupHct-GkGMuSTWcIA4" alt="" />
                       <div class="card__header-text">
-                        <h3 class="card__title x">idris Taş</h3>            
+                        <h3 class="card__title x">Idris Taş</h3>            
                         <span class="card__status x">Çasgem Genel Koordinatörü</span>
                       </div>
                     </div>
