--- a/src/app/applicant-components/applicant-bootcamp-list/applicant-bootcamp-list.component.html
+++ b/src/app/applicant-components/applicant-bootcamp-list/applicant-bootcamp-list.component.html
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-md-3 mb-6" *ngFor="let bootcamp of bootcamps">
 
-  <div class="card" style="width: 18rem;">
+  <div class="card sizes" style="width: 18rem;">
     <img src="{{bootcamp.img}}" class="card-img-top" alt="...">
     <div class="card-body">
       <h4 class="text-dark mb-3 text-center">{{bootcamp.name}}</h4>
