--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -45,7 +45,7 @@
 
                 <a class="text-white cursor-pointer">
                   <li class="nav-item d-flex align-items-center">
-                    <a href="#hakkımızda" class="nav-link text-body font-weight-bold asbc">
+                    <a href="#hakkimizda" class="nav-link text-body font-weight-bold asbc">
                       <span class="d-sm-inline d-none text-light tt">HAKKIMIZDA </span>
                     </a>
                   </li>
@@ -451,9 +451,9 @@
 
               </div>
               <div class="col-6 text-start text-dark mb-5">
-                <p>Kodluyoruz, Türkiye’de dünya çapında yazılımcılar yetiştirmek için çalışan, ülkemizi bir teknoloji
+                <p>Pairy 4 , Türkiye’de dünya çapında yazılımcılar yetiştirmek için çalışan, ülkemizi bir teknoloji
                   geliştirme merkezi yapmayı hedefleyen bir sosyal girişim.</p>
-                <p>Kodluyoruz olarak <strong> en temel hedeflerimiz:</strong></p>
+                <p>Pairy 4 olarak <strong> en temel hedeflerimiz:</strong></p>
                 <p>Değerlerimizi gözeterek, Türkiye’de yetişen yazılımcıların global ölçekte değer yaratacak
                   yazılımcılar olmasına katkı sağlamak.</p>
                   <p>Liseden başlayarak, kariyer yolunda kariyer gelişimi ihtiyaçlarına cevap verebiliyor olmak.</p>
@@ -640,14 +640,7 @@
                   src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,f_auto,q_auto:eco,dpr_1/v1496326817/adaflj3xa6ne5shlpc6g.png"
                   alt="">
               </div>
-              <p class="text-center mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae nemo ex
-                veritatis, quisquam vero nesciunt esse dicta corporis autem voluptatem doloribus quibusdam accusamus,
-                impedit quidem officiis repudiandae deserunt eum fugit sequi magni! Ab totam temporibus voluptate,
-                molestias dolorum labore perferendis vitae nostrum consequuntur molestiae reprehenderit fugit! Et veniam
-                dolor architecto minima quos aliquam sapiente ut cum sequi recusandae! Harum hic cumque iusto magni
-                perferendis maxime dolor cupiditate, veniam maiores quis sed, ratione impedit quo ipsum cum asperiores
-                fugit culpa aspernatur iste corporis consectetur. Eveniet modi ex assumenda id voluptate? Rerum
-                temporibus error placeat ullam nemo modi ducimus, eligendi est eaque!</p>
+              <p class="text-center mt-5">Yaygın inancın tersine, Lorem Ipsum rastgele sözcüklerden oluşmaz. Kökleri M.Ö. 45 tarihinden bu yana klasik Latin edebiyatına kadar uzanan 2000 yıllık bir geçmişi vardır. Virginia'daki Hampden-Sydney College'dan Latince profesörü Richard McClintock, bir Lorem Ipsum pasajında geçen ve anlaşılması en güç sözcüklerden biri olan 'consectetur' sözcüğünün klasik edebiyattaki örneklerini incelediğinde kesin bir kaynağa ulaşmıştır. Lorm Ipsum, Çiçero tarafından M.Ö. 45 tarihinde kaleme alınan "de Finibus Bonorum et Malorum" (İyi ve Kötünün Uç Sınırları) eserinin 1.10.32 ve 1.10.33 sayılı bölümlerinden gelmektedir. Bu kitap, ahlak kuramı üzerine bir tezdir ve Rönesans döneminde çok popüler olmuştur. Lorem Ipsum pasajının ilk satırı olan "Lorem ipsum dolor sit amet" 1.10.32 sayılı bölümdeki bir satırdan gelmektedir.</p>
 
 
 
