--- a/src/app/components/employee/add-employee/add-employee.component.html
+++ b/src/app/components/employee/add-employee/add-employee.component.html
@@ -1,6 +1,6 @@
 <div style="border-top: 1px solid rgb(40, 26, 34,0.23); width: 55%; margin: auto;" class="card mb-4 mt-8 px-8">
   <div class="card-header pb-0">
-    <h6 class="text-center mb-4" style=" font-size: 2rem;">Eğitmen Ekle</h6>
+    <h6 class="text-center mb-4" style=" font-size: 2rem;">Çalışan Ekle</h6>
   </div>
   <div class="card-body px-0 pt-0 pb-2" >
     <form  [formGroup]="addEmployeeForm" >
@@ -34,7 +34,7 @@
       </div>
     
     <button (click)="addEmployee()" style="margin-right:15px" type="submit" class="btn btn-warning">Ekle</button>
-    <button type="button" class="btn btn-outline-dark px-3" routerLink="/employee">Geri Dön</button>
+    <button type="button" class="btn btn-outline-dark px-3" routerLink="/admin/admin-employee">Geri Dön</button>
     </form>
   </div>
 </div>
