--- a/src/app/instructor-components/instructor-profile/instructor-profile.component.html
+++ b/src/app/instructor-components/instructor-profile/instructor-profile.component.html
@@ -21,7 +21,7 @@
       <div class="col-auto my-auto">
         <div class="h-100">
           <h5 class="mb-1">{{fullName}}</h5>
-          <p class="mb-0 font-weight-bold text-sm">CEO / Co-Founder</p>
+          <p class="mb-0 font-weight-bold text-sm">Eğitmen</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6 my-sm-auto ms-sm-auto me-sm-0 mx-auto mt-3">
