--- a/src/app/components/login/login/login.component.html
+++ b/src/app/components/login/login/login.component.html
@@ -6,7 +6,7 @@
           <div class="col-xl-4 col-lg-5 col-md-6 d-flex flex-column mx-auto">
             <div class="card card-plain mt-8">
               <div class="card-header pb-0 text-left bg-transparent">
-                <h3 class="font-weight-bolder text-info text-gradient">Hoşgeldin</h3>
+                <h3 class="font-weight-bolder text-info text-gradient text-center">Hoşgeldin</h3>
                 <p class="mb-0">Giriş yapmak için e-posta ve şifrenizi girin</p>
               </div>
               <div class="card-body">
