--- a/src/app/instructor-components/instructor-list/instructor-list.component.html
+++ b/src/app/instructor-components/instructor-list/instructor-list.component.html
@@ -3,7 +3,7 @@
       <h3 class="text-center mt-4" style="font-weight: 500;">Eğitmenlerimiz</h3>
 <div class="col-md-3 mt-5" *ngFor="let instructor of instructors">
   <div class="card x">
-    <img class="card-img-top" src={{instructor.image}}>
+    <img class="card-img-top" style="height:300px" src={{instructor.image}}>
     <div class="position-relative" style="height: 50px;overflow: hidden;margin-top: -50px;z-index:2;position: relative;">
       <div class="position-absolute w-100 top-0" style="z-index: 1;">
           <svg class="waves waves-sm" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 40" preserveAspectRatio="none" shape-rendering="auto">
