--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,7 +6,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-gradient-dark z-index-3 py-3 top-0 hehz">
       <div class="container ">
-        <a class="navbar-brand" name="home" rel="tooltip" title="Designed and Coded by Creative Tim"
+        <a class="navbar-brand logoimg" name="home" rel="tooltip" title="Designed and Coded by Creative Tim"
           data-placement="bottom" target="_blank" >
           <img  src="https://i.ibb.co/8085SdQ/Pa-Ir-1898-600-piksel.png" style="width: 35%;"  alt="">
         </a>
