--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -183,7 +183,7 @@
                       <img class="card__thumb" src="https://i.ibb.co/dJgqkdQ/0dc86408-5f16-4c08-8615-e42327f78525.jpg" alt="" />
                       <div class="card__header-text">
                         <h3 class="card__title x">Enes Bin Malik Köksal</h3>            
-                        <span class="card__status x">Eğitim Uzman Yardımcısı</span>
+                        <span class="card__status x">Eğitim Uzmanı</span>
                       </div>
                     </div>
                     <p class="card__description x">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
