--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
       <div class="container ">
         <a class="navbar-brand logoimg" name="home" rel="tooltip" title="Designed and Coded by Creative Tim"
           data-placement="bottom" target="_blank" >
-          <img  src="https://i.ibb.co/8085SdQ/Pa-Ir-1898-600-piksel.png" style="width: 35%;"  alt="">
+          <h6 style="color: white">PAIR 4 ACADEMY</h6>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
